Added loading and error context, added more themes.

--- a/src/index.scss
+++ b/src/index.scss
@@ -101,6 +101,14 @@ header {
   border-radius: 20px;
   box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.25);
 
+  #error-message {
+    padding: 25px;
+    text-align: center;
+    svg {
+      color: hsl(256, 78%, 34%);
+    }
+  }
+
   span:not(.info-row > span) {
     display: block;
     margin: 50px;
@@ -270,6 +278,12 @@ body {
   }
   &.overcast {
     background: linear-gradient(0deg, #333 0%, #dadada 100%);
+  }
+  &.night-blue {
+    background: linear-gradient(0deg, #050616 0%, #1a0e3e 100%);
+  }
+  &.night-grey {
+    background: linear-gradient(0deg, #050616 0%, #222 100%);
   }
 }
 
