--- a/src/index.css
+++ b/src/index.css
@@ -88,6 +88,13 @@ header h2 {
   border-radius: 20px;
   box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.25);
 }
+#weather-body #error-message {
+  padding: 25px;
+  text-align: center;
+}
+#weather-body #error-message svg {
+  color: hsl(256deg, 78%, 34%);
+}
 #weather-body span:not(.info-row > span) {
   display: block;
   margin: 50px;
@@ -243,6 +250,12 @@ body.day-grey {
 }
 body.overcast {
   background: linear-gradient(0deg, #333 0%, #dadada 100%);
+}
+body.night-blue {
+  background: linear-gradient(0deg, #050616 0%, #1a0e3e 100%);
+}
+body.night-grey {
+  background: linear-gradient(0deg, #050616 0%, #222 100%);
 }
 
 /* MEDIA Q */
